crates/uv/tests/it/snapshots/it__lock_conflict__project_level_conflict_with_extra-2.snap
---
source: crates/uv/tests/it/lock_conflict.rs
expression: lock
---
version = 1
revision = 3
requires-python = ">=3.12"
conflicts = [[
    { package = "pkg-a" },
    { package = "pkg-b", extra = "extra1" },
]]

[options]
exclude-newer = "2024-03-25T00:00:00Z"

[manifest]
members = [
    "pkg-a",
    "pkg-b",
    "workspace-root",
]

[[package]]
name = "pkg-a"
version = "0.1.0"
source = { editable = "pkg-a" }
dependencies = [
    { name = "sortedcontainers", version = "2.3.0", source = { registry = "https://pypi.org/simple" }, marker = "extra == 'project-5-pkg-a'" },
]

[package.metadata]
requires-dist = [{ name = "sortedcontainers", specifier = "==2.3.0" }]

[[package]]
name = "pkg-b"
version = "0.1.0"
source = { editable = "pkg-b" }

[package.optional-dependencies]
extra1 = [
    { name = "sortedcontainers", version = "2.4.0", source = { registry = "https://pypi.org/simple" } },
]

[package.metadata]
requires-dist = [{ name = "sortedcontainers", marker = "extra == 'extra1'", specifier = "==2.4.0" }]
provides-extras = ["extra1"]

[[package]]
name = "sortedcontainers"
version = "2.3.0"
source = { registry = "https://pypi.org/simple" }
sdist = { url = "https://files.pythonhosted.org/packages/14/10/6a9481890bae97da9edd6e737c9c3dec6aea3fc2fa53b0934037b35c89ea/sortedcontainers-2.3.0.tar.gz", hash = "sha256:59cc937650cf60d677c16775597c89a960658a09cf7c1a668f86e1e4464b10a1", size = 30509, upload-time = "2020-11-09T00:03:52.258Z" }
wheels = [
    { url = "https://files.pythonhosted.org/packages/20/4d/a7046ae1a1a4cc4e9bbed194c387086f06b25038be596543d026946330c9/sortedcontainers-2.3.0-py2.py3-none-any.whl", hash = "sha256:37257a32add0a3ee490bb170b599e93095eed89a55da91fa9f48753ea12fd73f", size = 29479, upload-time = "2020-11-09T00:03:50.723Z" },
]

[[package]]
name = "sortedcontainers"
version = "2.4.0"
source = { registry = "https://pypi.org/simple" }
sdist = { url = "https://files.pythonhosted.org/packages/e8/c4/ba2f8066cceb6f23394729afe52f3bf7adec04bf9ed2c820b39e19299111/sortedcontainers-2.4.0.tar.gz", hash = "sha256:25caa5a06cc30b6b83d11423433f65d1f9d76c4c6a0c90e3379eaa43b9bfdb88", size = 30594, upload-time = "2021-05-16T22:03:42.897Z" }
wheels = [
    { url = "https://files.pythonhosted.org/packages/32/46/9cb0e58b2deb7f82b84065f37f3bffeb12413f947f9388e4cac22c4621ce/sortedcontainers-2.4.0-py2.py3-none-any.whl", hash = "sha256:a163dcaede0f1c021485e957a39245190e74249897e2ae4b2aa38595db237ee0", size = 29575, upload-time = "2021-05-16T22:03:41.177Z" },
]

[[package]]
name = "workspace-root"
version = "0.1.0"
source = { virtual = "." }
